[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformkit"
version = "0.2.1"
description = "TransformKit SDK — node-based media pipeline engine for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "TransformKit" }]
keywords = ["media", "pipeline", "transform", "image", "video", "audio", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/transform-kit/sdk-python"
Repository = "https://github.com/transform-kit/sdk-python.git"
Issues = "https://github.com/transform-kit/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/transformkit"]

[tool.hatch.build.targets.sdist]
include = ["src/transformkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
